--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,12 @@ cmake_minimum_required(VERSION 3.18)
 
 project(minijson)
 
-set(SRC src/main.cc)
+set(CMAKE_CXX_STANDARD 20)
+
+include_directories(include)
+
+set(SRC src/main.cc
+        src/lexer.cc
+)
 
 add_executable(${PROJECT_NAME} ${SRC})
