It sort of works for strings, objects, numbers
...If you discount the horrible interface and awful static_cast.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "files.associations": {
     "string": "cpp",
     "iosfwd": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "memory": "cpp",
+    "numeric": "cpp"
   }
 }
