--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,12 +4,6 @@ project(minijson)
 
 set(CMAKE_CXX_STANDARD 20)
 
-include_directories(include)
-
-set(SRC src/main.cc
-        src/lexer.cc
-)
-
-add_executable(${PROJECT_NAME} ${SRC})
+include_directories(.)
 
 add_subdirectory(tests)
