Adds examples/, README.md

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,10 +34,10 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
                       "${gmock_SOURCE_DIR}/include")
 endif()
 
-add_executable(tokenizer_tests src/lexer_tests.cc)
+add_executable(tokenizer_tests lexer_tests.cc)
 target_link_libraries(tokenizer_tests gtest_main gmock_main)
 add_test(NAME tokenizer_tests COMMAND tokenizer_tests)
 
-add_executable(parser_tests src/parser_tests.cc)
+add_executable(parser_tests parser_tests.cc)
 target_link_libraries(parser_tests gtest_main gmock_main)
 add_test(NAME parser_tests COMMAND parser_tests)
