--- a/.github/actions/lint/Dockerfile
+++ b/.github/actions/lint/Dockerfile
@@ -3,4 +3,6 @@ FROM alpine:3.12
 RUN apk add --no-cache git make clang bash
 WORKDIR /app
 ADD . .
+ADD entrypoint.sh /entrypoint.sh
 RUN rm -rf build/*
+ENTRYPOINT ["/entrypoint.sh"]
