--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,6 @@ add_executable(jsonnode_tests jsonnode_tests.cc)
 target_link_libraries(jsonnode_tests gtest_main gmock_main)
 add_test(NAME jsonnode_tests COMMAND jsonnode_tests)
 
-add_executable(boundstream_tests boundstream_tests.cc)
-target_link_libraries(boundstream_tests gtest_main gmock_main)
-add_test(NAME boundstream_tests COMMAND boundstream_tests)
+add_executable(bounditerator_tests bounditerator_tests.cc)
+target_link_libraries(bounditerator_tests gtest_main gmock_main)
+add_test(NAME bounditerator_tests COMMAND bounditerator_tests)
