Better copy-and-swap for JSONNode and basic const iterators for Obj and Arr

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(json_parsing json_parsing.cc)
 add_executable(parsing_from_file parsing_from_file.cc)
+add_executable(iterators iterators.cc)
