Adds character escaping, serialization to std::ostream and serialization example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_executable(json_parsing json_parsing.cc)
 add_executable(parsing_from_file parsing_from_file.cc)
 add_executable(iterators iterators.cc)
+add_executable(serialization serialization.cc)
